--- a/index.html
+++ b/index.html
@@ -48,14 +48,10 @@
             <li class="nav-item">
               <a class="nav-link active" href="#">Drugs</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                aria-expanded="false">New Case File</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="#">Regular</a></li>
-                <li><a class="dropdown-item" href="#">Epidemic</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="#">New Case Files</a>
             </li>
+            
           </ul>
         </div>
         <form class="d-flex">
